Update and rename brewer.html to index.html

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
      rel="stylesheet"
      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
      crossorigin="anonymous">
-     <link rel="stylesheet" href="BREWER.css">
+     <link rel="stylesheet" href="style.css">
     <title>BREWERY</title>
 <body>
     <div class="navbar sticky-top navbar-dark bg-dark" id="header">
         <span> BREWERYDB API USING PROMISE </span>
     </div>
-    <script src="brewer.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
